# python-project-49

./: .flake8  .gitignore  Makefile  README.md  brain_games.py  calc.cast  demo.cast  even.cast  gcd.cast  prime.cast  progression.cast  pyproject.toml
brain_games/: cli.py  consts.py  engine.py  utils.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  game_logic.py  gcd.py  prime.py  progression.py  random_number.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
