[project]
name = "python-project-49"
version = "0.1.0"
description = "It’s brain games, for each you have to give 3 correct answers"
authors = "Захарчук Диана"
readme = "README.md"
packages = [
  { include = "brain_games" },
]
requires-python = ">=3.12"
dependencies = [
    "makefile>=1.1.0",
    "prompt>=0.4.1",
    "ruff>=0.8.4",
]
prompt = "^0.4.1"

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-progression = "brain_games.scripts.brain_progression:main"

[project.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]
